kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__string_literal_recovery_7.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 10
expression: "crate::tests::parsing_expr_string(\"'\\n\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "'\n",
            value: "",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

